# asteria

./: .appveyor.yml  .ccls  .cirrus.yml  .drone.yml  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  check_includes.sh  ci.sh  compile_commands.json  compile_flags.txt  configure.ac  description-pak  doc  fib.ast  fibonacci.ast  gdb.sh  irc-notify.py  makedeb.sh  meson.build  meson.options  meson_options.txt  meson_setup.sh  rocket  run_tests.sh  setup_meson.sh  src  test  test.ast  update.ast
.github/workflows/: c-cpp.yml  ci.yml  codeql.yml
DEBIAN/: control  postinst
asteria/: Makefile.inc.am  argument_reader.cpp  argument_reader.hpp  binding_generator.cpp  binding_generator.hpp  fwd.cpp  fwd.hpp  precompiled.hpp  precompiled.ipp  recursion_sentry.cpp  recursion_sentry.hpp  simple_script.cpp  simple_script.hpp  source_location.cpp  source_location.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp  version.h.in  xprecompiled.hpp
asteria/compiler/: compiler_error.cpp  compiler_error.hpp  enums.cpp  enums.hpp  expression_unit.cpp  expression_unit.hpp  infix_element.cpp  infix_element.hpp  statement.cpp  statement.hpp  statement_sequence.cpp  statement_sequence.hpp  token.cpp  token.hpp  token_stream.cpp  token_stream.hpp
asteria/details/: argument_reader.ipp  avm_rod.ipp  avmc_queue.ipp  reference_dictionary.ipp  reference_stack.ipp  utils.cpp  utils.ipp  value.ipp  variable_hashmap.ipp
asteria/doc/: asteria.nanorc  examples.txt  operator-precedence.txt  standard-library.txt  syntax.txt  tutorial.txt
asteria/llds/: avm_rod.cpp  avm_rod.hpp  avmc_queue.cpp  avmc_queue.hpp  reference_dictionary.cpp  reference_dictionary.hpp  reference_stack.cpp  reference_stack.hpp  variable_hashmap.cpp  variable_hashmap.hpp
asteria/repl/: commands.cpp  editline.cpp  fwd.hpp  globals.cpp  interact.cpp  main.cpp  single.cpp
asteria/rocket/: Makefile.inc.am  README.md  allocator_util.hpp  allocator_utilities.hpp  array.hpp  ascii_case.hpp  ascii_numget.cpp  ascii_numget.hpp  ascii_numput.cpp  ascii_numput.hpp  assert.cpp  assert.hpp  atomic.hpp  atomic_flag.hpp  bit_mask.hpp  char_traits.hpp  checked_ptr.hpp  compiler.h  condition_variable.hpp  cow_hashmap.hpp  cow_istringstream.cpp  cow_istringstream.hpp  cow_ostringstream.hpp  cow_string.cpp  cow_string.hpp  cow_string_ops.cpp  cow_string_ops.hpp  cow_stringbuf.hpp  cow_stringstream.hpp  cow_vector.hpp  fill_iterator.hpp  fma.cpp  format.cpp  format.hpp  fwd.hpp  hash_table_util.hpp  hash_table_utilities.hpp  linear_buffer.cpp  linear_buffer.hpp  mutex.hpp  (+52 more)
asteria/runtime/: abstract_context.cpp  abstract_context.hpp  abstract_hooks.cpp  abstract_hooks.hpp  air_node.cpp  air_node.hpp  air_optimizer.cpp  air_optimizer.hpp  analytic_context.cpp  analytic_context.hpp  argument_reader.cpp  argument_reader.hpp  backtrace_frame.hpp  binding_generator.cpp  binding_generator.hpp  enums.cpp  enums.hpp  executive_context.cpp  executive_context.hpp  garbage_collector.cpp  garbage_collector.hpp  global_context.cpp  global_context.hpp  instantiated_function.cpp  instantiated_function.hpp  module_loader.cpp  module_loader.hpp  ptc_arguments.cpp  ptc_arguments.hpp  random_engine.cpp  random_engine.hpp  reference.cpp  reference.hpp  reference_modifier.cpp  (+9 more)
callgrind/: callgrind.sh  fib27.ast  fib_test.ast
ci/: appveyor_irc-notify.py  build.sh  check_includes.sh  checkinstall  cirrus_irc-notify.py  irc-notify.py
doc/: Makefile.inc.am  asteria.nanorc  grammar.md  grammar.txt  operator-precedence.txt  quick-guide.md  sample.conf  specification.txt  standard-library.md  standard-library.txt  syntax.txt  tutorial.txt
profiling/: callgrind.sh  fib_test.ast  vtune.sh
repl/: Makefile.inc.am  commands.cpp  editline.cpp  fwd.hpp  globals.cpp  interact.cpp  libedit.cpp  main.cpp  single.cpp
rocket/: Makefile.inc.am  array.hpp  ascii_case.hpp  ascii_numget.cpp  ascii_numget.hpp  ascii_numput.cpp  ascii_numput.hpp  assert.cpp  assert.hpp  atomic.hpp  bit_mask.hpp  char_traits.hpp  compiler.h  condition_variable.hpp  cow_hashmap.hpp  cow_string.cpp  cow_string.hpp  cow_vector.hpp  fill_iterator.hpp  format.cpp  format.hpp  fwd.hpp  linear_buffer.cpp  linear_buffer.hpp  mutex.hpp  once_flag.hpp  optional.hpp  prehashed_string.cpp  prehashed_string.hpp  recursive_mutex.hpp  refcnt_ptr.hpp  reference_counter.hpp  reference_wrapper.hpp  shared_function.hpp  static_char_buffer.hpp  static_vector.hpp  throw.cpp  throw.hpp  tinybuf.cpp  tinybuf.hpp  (+37 more)
src/: Makefile.inc.am  activation_record.cpp  activation_record.hpp  block.cpp  block.hpp  compound_statement.cpp  compound_statement.hpp  exception.cpp  exception.hpp  executor.cpp  executor.hpp  expression.cpp  expression.hpp  expression_node.cpp  expression_node.hpp  function_base.cpp  function_base.hpp  function_parameter.cpp  function_parameter.hpp  fwd.cpp  fwd.hpp  fwd.hpp.in  initializer.cpp  initializer.hpp  insertable_ostream.cpp  insertable_ostream.hpp  instantiated_function.cpp  instantiated_function.hpp  local_variable.cpp  local_variable.hpp  main.cpp  misc.cpp  misc.hpp  nullable_value.cpp  nullable_value.hpp  object.hpp  observer_ptr.hpp  opaque_base.cpp  opaque_base.hpp  parameter.cpp  (+38 more)
test/: Makefile.inc.am  _test_init.hpp  array.cpp  ascii_numget.cpp  ascii_numget_double.cpp  ascii_numget_float.cpp  ascii_numput.cpp  ascii_numput_double.cpp  ascii_numput_float.cpp  binding_variable.cpp  block.cpp  bypassed_variable.cpp  c_stack_overflow.cpp  checksum.cpp  chrono.cpp  context.cpp  csv.cpp  defer.cpp  defer_ptc.cpp  exception.cpp  executive_context.cpp  expression.cpp  expression_node.cpp  filesystem.cpp  for_each.cpp  garbage_collection.cpp  garbage_collector.cpp  gc.cpp  gc2.cpp  gc_loop.cpp  github_101.cpp  github_102.cpp  github_105.cpp  github_108.cpp  github_113.cpp  github_116.cpp  github_308.cpp  github_312.cpp  github_321.cpp  github_71.cpp  (+56 more)
tests/: activation_record.cpp  block.cpp  exception.cpp  expression.cpp  insertable_ostream.cpp  misc.cpp  recycler.cpp  reference.cpp  run_one.sh  scope.cpp  test_init.hpp  utilities.cpp  variable.cpp
(+668 files in other folders)
